--- a/FJ21-AGENDA/WebContent/WEB-INF/web.xml
+++ b/FJ21-AGENDA/WebContent/WEB-INF/web.xml
@@ -9,12 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
+  <!--
   <error-page>
   	<exception-type>java.lang.Exception</exception-type>
   	<location>/erro.html</location>
   </error-page>
-  
+
   <error-page>
   	<error-code>404</error-code>
   	<location>/404.html</location>
@@ -24,7 +24,7 @@
   	<error-code>500</error-code>
   	<location>/500.html</location>
   </error-page>
-  
+ -->
   <servlet>
   	<servlet-name>Oi Mundo</servlet-name>
   	<servlet-class>
@@ -33,7 +33,7 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>Oi Mundo</servlet-name>
-  	<url-pattern>/oi</url-pattern>
+  	<url-pattern>/oimundo</url-pattern>
   </servlet-mapping>
   
   <servlet>
